--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: ci
 on: [push]
+permissions:
+  contents: write
 jobs:
   build-pdf:
     runs-on: ubuntu-latest
@@ -12,3 +14,7 @@ jobs:
           args: slide-deck.md -o build/slides.pdf
         env:
           MARP_USER: root:root
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build
