--- a/.github/workflows/dev-meetup.yml
+++ b/.github/workflows/dev-meetup.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Marp Build
         uses: docker://marpteam/marp-cli:v1.7.0
         with:
-          args: dev-meetup.md -o build/dev-meetup.pdf
+          args: dev-meetup.md -o build/dev-meetup.html
         env:
           MARP_USER: root:root
       - name: Deploy
