--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Marp Build
+      - name: Copy images
+        run: |
+          mkdir build/
+          cp *.png build/
+      - name: Marp Build (html)
         uses: docker://marpteam/marp-cli:v1.7.0
         with:
           args: slide-deck.md -o build/slides.html
+        env:
+          MARP_USER: root:root
+      - name: Marp Build (pdf)
+        uses: docker://marpteam/marp-cli:v1.7.0
+        with:
+          args: slide-deck.md -o build/slides.pdf
         env:
           MARP_USER: root:root
       - name: Deploy
