--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Marp Build (pdf)
         uses: docker://marpteam/marp-cli:v1.7.0
         with:
-          args: slide-deck.md -o build/slides.pdf
+          args: slide-deck.md --allow-local-files -o build/slides.pdf
         env:
           MARP_USER: root:root
       - name: Deploy
